(PC-31264)[PRO] fix: quantity cell width on StockEventEdition + support hiddenLabel alignement

--- a/pro/src/ui-kit/form/QuantityInput/QuantityInput.module.scss
+++ b/pro/src/ui-kit/form/QuantityInput/QuantityInput.module.scss
@@ -11,5 +11,9 @@
     &-for-small-label {
       margin-top: rem.torem(42px);
     }
+
+    &-for-hidden-label {
+      margin-top: rem.torem(10px);
+    }
   }
 }
